refacto: code simplification